# command_line_rust

./: Cargo.toml  README.md
catr/: Cargo.toml
catr/src/: lib.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
