[package]
name = "catr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

[dev-dependencies]
anyhow = { version = "1.0.86" }
assert_cmd = { version = "2.0.14" }
predicates = { version = "3.1.0" }
pretty_assertions = { version = "1.4.0" }
rand = { version = "0.8.5" }
